--- a/app/src/main/res/layout/activity_startscreen.xml
+++ b/app/src/main/res/layout/activity_startscreen.xml
@@ -21,13 +21,14 @@
     <TextView
         android:id="@+id/welcome"
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="96dp"
         android:background="#A35656"
         android:gravity="center"
         android:text="Welcome to Meal Match"
         android:textColor="#fff"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="background"
         app:layout_constraintBottom_toTopOf="@id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,7 +36,7 @@
     <TextView
         android:id="@+id/startButton"
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="96dp"
         android:background="#F44336"
         android:gravity="center"
         android:text="Tap to Start"
@@ -43,6 +44,7 @@
         android:textColor="#fff"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:onClick="toLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
