--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -100,6 +100,7 @@
         android:layout_marginRight="39dp"
         android:layout_marginBottom="25dp"
         android:text="Back"
+        android:onClick="toSwipe"
         app:backgroundTint="#F44336"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
