--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -29,6 +29,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="4dp"
         android:text="Matches"
+        android:onClick="toMatches"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
@@ -84,6 +85,7 @@
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:contentDescription="@string/settings"
+        android:onClick="toSettings"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.0"
