--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -130,34 +130,14 @@
         app:maxImageSize="75dp"
         app:srcCompat="@drawable/ic_baseline_thumb_up_24" />
 
-    <FrameLayout
-        android:layout_width="350dp"
-        android:layout_height="425dp"
-        android:orientation="vertical"
+    <com.yuyakaido.android.cardstackview.CardStackView
+        android:id="@+id/cardstack"
+        android:layout_width="412dp"
+        android:layout_height="519dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar5"
-        app:layout_constraintVertical_bias="0.23000002">
+        app:layout_constraintVertical_bias="0.110000014" />
 
-        <ImageView
-            android:id="@+id/FoodImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="75dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_gravity="bottom">
-
-            <TextView
-                android:id="@+id/Location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Location"
-                android:textColor="#000000"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
