--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -6,25 +6,42 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="408dp"
-        android:layout_height="617dp"
+        android:layout_width="250dp"
+        android:layout_height="170dp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/swipe_left_indicator"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="10dp"
+            android:alpha="0"
+            android:background="#A5F" />
+
+        <View
+            android:id="@+id/swipe_right_indicator"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="right"
+            android:layout_margin="10dp"
+            android:alpha="0"
+            android:background="#5AF" />
+
+        <TextView
+            android:id="@+id/test"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#E339"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="40sp"
+            tools:text="test" />
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/location"
-        android:layout_width="409dp"
-        android:layout_height="115dp"
-        android:text="location"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
