--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -96,7 +96,7 @@
         tools:ignore="VectorDrawableCompat" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/like"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginEnd="24dp"
@@ -104,17 +104,17 @@
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:focusable="true"
-        android:contentDescription="@string/dislike"
-        app:backgroundTint="#F44336"
+        android:contentDescription="@string/like"
+        app:backgroundTint="#32CD32"
         app:fabCustomSize="100dp"
         app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="75dp"
-        app:srcCompat="@drawable/ic_baseline_thumb_down_24" />
+        app:srcCompat="@drawable/ic_baseline_thumb_up_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton3"
+        android:id="@+id/dislike"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="24dp"
@@ -122,13 +122,13 @@
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:focusable="true"
-        android:contentDescription="@string/like"
-        app:backgroundTint="#32CD32"
+        android:contentDescription="@string/dislike"
+        app:backgroundTint="#F44336"
         app:fabCustomSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:maxImageSize="75dp"
-        app:srcCompat="@drawable/ic_baseline_thumb_up_24" />
+        app:srcCompat="@drawable/ic_baseline_thumb_down_24"/>
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/cards"
