--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:layout_width="250dp"
-        android:layout_height="170dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,20 +33,21 @@
 
         <LinearLayout
             android:id="@+id/fullcard"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
-                android:layout_height="108dp"
+                android:layout_height="420dp"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/food_image_1" />
 
             <TextView
                 android:id="@+id/test"
                 android:layout_width="match_parent"
-                android:layout_height="58dp"
+                android:layout_height="60dp"
                 android:background = "#F44336"
                 android:gravity="center"
                 android:textColor="@android:color/white"
