--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -37,18 +37,36 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView3"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="420dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/food_image_1" />
+                android:layout_height="420dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="420dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/food_image_1" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="420dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/food_image_1" />
+                </LinearLayout>
+            </ScrollView>
 
             <TextView
                 android:id="@+id/test"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background = "#F44336"
+                android:background="#F44336"
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:textSize="40sp"
